# eat-snake

./: CMakeLists.txt  README.md  main.cpp
include/: Game.h  Pos.h  autosnake.h  food.h  snake.h
src/: Game.cpp  Pos.cpp  autosnake.cpp  food.cpp  predefine.h  snake.cpp  snake.h
